# SC4001-Evaluating---Enhancing-Moral-Alignment-in-Large-Language-Models--LLMs-

./: README.md  part1.ipynb  part1_get_baseline.py  part1_get_training_data.py  part1_o1.py  part1_train_target.py  part1_trainer.py  part2.ipynb  part2_a.py  part2_b.py  part2_b_to_test.py  pyproject.toml  util.py
SaGE/: README.md
SaGE/data/: README.md
SaGE/data/mcc/: mcc_moral.csv
SaGE/scripts/: edge_generation.py  model_output.py  pair_generation.py  para_generation.py  pipeline.py  rot_generation.py
SaGE/scripts/hella_swag/: pipeline.py
SaGE/scripts/t_analysis/: tedge_generation.py  tpair_generation.py
data/: gpt4o_answers.csv
